vlib/v/checker/tests/generic_fn_infinite_loop_limit_err.out
vlib/v/checker/tests/generic_fn_infinite_loop_limit_err.vv:6:2: warning: unused variable: `ff1`
    4 | 
    5 | fn main() {
    6 |     ff1 := f1 // <-- missing e.g. `[int]`
      |     ~~~
    7 |     // ff1 := f1[int] <-- is a valid usage with generic return types that are not generic structs
    8 | }
vlib/v/checker/tests/generic_fn_infinite_loop_limit_err.vv:1:1: error: generic function visited more than 10000 times
    1 | fn f1[T](x T, i int) T {
      | ~~~~~~~~~~~~~~~~~~~~~~
    2 |     return x
    3 | }
